--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "public"]
 	path = public
-	url = https://github.com/saifnouma/saif-nouma.github.io.git
+	url = https://github.com/saifnouma/saifnouma@github.io.git
 	branch = master
